--- a/docs/SASS/components/_portfolioContainer.scss
+++ b/docs/SASS/components/_portfolioContainer.scss
@@ -29,24 +29,34 @@
   &__option {
     float: left;
     padding: 3rem 0 2rem 2rem;
-    // @include respond(tab-port) {
-    //   padding: 4rem 0 2rem 2rem;
-    // }
+    width: 5rem;
+    @include respond(tab-port) {
+      padding: 4rem 0 4rem 2rem;
+    }
     display: flex;
 
+    &-btnContainer {
+      height: 4px;
+      display: block;
+      // position: relative;
+      width: 15rem;
+    }
+    
+
     &-text {
-      display: none;
+      
+      // display: none;
+      visibility: hidden;
       // padding: 0 0 0 2rem;
       // height: 5rem;
+      transition: all .4s;
+      opacity: 0;
       color: white;
       font-size: $default-font-size;
-      padding-left: 2rem;
-      @include respond(tab-land) {
-        display: inline-block;
-        transform: translateY(0);
-      }
+      // padding-left: 3rem;
+     
 
-      transform: translateY(1rem);
+      transform: translateY(2rem);
       
       
     }
@@ -66,7 +76,10 @@
       border-radius: 50%;
       display: inline-block;
       position: absolute;
-      left: 1.1rem;
+      left: 0;
+      @include respond(phone) {
+        left: 2rem;
+      }
 
       &::after {
         content: "";
@@ -108,15 +121,17 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  // opacity: 0;
+  transition: all 2s;
   // height: 140rem; 
   width: 100%;
+  animation: moveInBottom2 2s ease-out ;
   margin-top: 25%;
   // background-color: orangered;
   @include respond(nav) {
     width: 80%;
     margin: 10%;
   }
-
 
   &__header {
     margin: 3rem 0 2rem 0;
@@ -130,36 +145,73 @@
 
     &-left{
       display: none;
-      @include respond(nav) {
+      @include respond(tab-land) {
         display: block;
+        position: absolute;
+        width: 12vw;
+        // max-width: 20%;
+        // max-height: 35;
+        transform: translate(0, 10rem);
       }
 
     }
 
     &-mid {
-      width: 75%;
-      max-height: 70%;
+      width: 50vw;
+      // max-height: 30;
     
 
     }
 
     &-right {
       display: none;
-      @include respond(nav) {
+      @include respond(tab-land) {
         display: block;
+        width: 30vw;
+        transform: translate(55rem, -20rem);
+        float: right;
+        position: absolute;
+
       }
+
+      @include respond(weirdIpad) {
+        transform: translate(60rem, -20rem);
+      }
+
+      @include respond(weirdIpad2) {
+        transform: translate(65rem, -25rem);
+      }
+      // @include respond(big-desktop) {
+      //   width: 28vw;
+      //   transform: translate(75rem, -30rem);
+      // }
+      // @include respond(superBig-desktop) {
+      //   // width: 28vw;
+      //   transform: translate(80rem, -35rem);
+      // }
     }
   }
 
   &__link {
     font-size: 60%;
     margin-top: 3rem;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @include respond(phone) {
+      flex-direction: row;
+    }
 
     &-left {
       // text-decoration: none;
       color: $color-white;
       text-shadow: 2px 2px $color-black;
-      margin-right: 3rem;
+      // margin-right: 1rem;
+      @include respond(phone) {
+        margin-right: 3rem;
+      }
+      
 
     }
 
@@ -167,7 +219,10 @@
       // text-decoration: none;
       color: $color-white;
       text-shadow: 2px 2px $color-black;
-      margin-left: 3rem;
+      // margin-left: 1rem;
+      @include respond(phone) {
+        margin-left: 3rem;
+      }
     }
 
     &::before,
@@ -328,7 +383,10 @@
 
 }
 
-.Tabs__option-button:hover ~.Tabs__option-text {
+.Tabs__option-btnContainer:hover ~.Tabs__option-text {
   display: inline-block;
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
 }
 
