--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -26,6 +26,14 @@
     opacity: 1;
     transform: translate(0); } }
 
+@keyframes moveInBottom2 {
+  0% {
+    opacity: 0;
+    transform: translateY(5rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
 @keyframes loop {
   from {
     transform: rotateX(0deg) rotateY(0deg); }
@@ -49,6 +57,9 @@ html {
   font-size: 62.5%;
   font-family: 'Titillium Web', sans-serif;
   scroll-behavior: smooth; }
+  @media only screen and (min-width: 112.5em) {
+    html {
+      font-size: 80%; } }
 
 body {
   box-sizing: border-box; }
@@ -345,17 +356,22 @@ a.intro-Contact-link {
   .Tabs__option {
     float: left;
     padding: 3rem 0 2rem 2rem;
+    width: 5rem;
     display: flex; }
+    @media only screen and (min-width: 56.25em) {
+      .Tabs__option {
+        padding: 4rem 0 4rem 2rem; } }
+    .Tabs__option-btnContainer {
+      height: 4px;
+      display: block;
+      width: 15rem; }
     .Tabs__option-text {
-      display: none;
+      visibility: hidden;
+      transition: all .4s;
+      opacity: 0;
       color: white;
       font-size: 1.6rem;
-      padding-left: 2rem;
-      transform: translateY(1rem); }
-      @media only screen and (min-width: 75em) {
-        .Tabs__option-text {
-          display: inline-block;
-          transform: translateY(0); } }
+      transform: translateY(2rem); }
     .Tabs__option-input {
       display: none; }
     .Tabs__option-button {
@@ -365,7 +381,10 @@ a.intro-Contact-link {
       border-radius: 50%;
       display: inline-block;
       position: absolute;
-      left: 1.1rem; }
+      left: 0; }
+      @media only screen and (min-width: 37.5em) {
+        .Tabs__option-button {
+          left: 2rem; } }
       .Tabs__option-button::after {
         content: "";
         display: block;
@@ -397,7 +416,9 @@ a.intro-Contact-link {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  transition: all 2s;
   width: 100%;
+  animation: moveInBottom2 2s ease-out;
   margin-top: 25%; }
   @media only screen and (min-width: 48em) {
     .TabContent {
@@ -410,28 +431,51 @@ a.intro-Contact-link {
     padding: 0 1.5rem; }
   .TabContent__images-left {
     display: none; }
-    @media only screen and (min-width: 48em) {
+    @media only screen and (min-width: 75em) {
       .TabContent__images-left {
-        display: block; } }
+        display: block;
+        position: absolute;
+        width: 12vw;
+        transform: translate(0, 10rem); } }
   .TabContent__images-mid {
-    width: 75%;
-    max-height: 70%; }
+    width: 50vw; }
   .TabContent__images-right {
     display: none; }
-    @media only screen and (min-width: 48em) {
+    @media only screen and (min-width: 75em) {
       .TabContent__images-right {
-        display: block; } }
+        display: block;
+        width: 30vw;
+        transform: translate(55rem, -20rem);
+        float: right;
+        position: absolute; } }
+    @media only screen and (min-width: 87.5em) {
+      .TabContent__images-right {
+        transform: translate(60rem, -20rem); } }
+    @media only screen and (min-width: 100em) {
+      .TabContent__images-right {
+        transform: translate(65rem, -25rem); } }
   .TabContent__link {
     font-size: 60%;
-    margin-top: 3rem; }
+    margin-top: 3rem;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    @media only screen and (min-width: 37.5em) {
+      .TabContent__link {
+        flex-direction: row; } }
     .TabContent__link-left {
       color: #fff;
-      text-shadow: 2px 2px #000;
-      margin-right: 3rem; }
+      text-shadow: 2px 2px #000; }
+      @media only screen and (min-width: 37.5em) {
+        .TabContent__link-left {
+          margin-right: 3rem; } }
     .TabContent__link-right {
       color: #fff;
-      text-shadow: 2px 2px #000;
-      margin-left: 3rem; }
+      text-shadow: 2px 2px #000; }
+      @media only screen and (min-width: 37.5em) {
+        .TabContent__link-right {
+          margin-left: 3rem; } }
     .TabContent__link::before, .TabContent__link::after {
       content: "";
       border: 0 solid #e2e8f0; }
@@ -534,8 +578,11 @@ a.intro-Contact-link {
             margin-left: 10rem;
             text-align: start; } }
 
-.Tabs__option-button:hover ~ .Tabs__option-text {
-  display: inline-block; }
+.Tabs__option-btnContainer:hover ~ .Tabs__option-text {
+  display: inline-block;
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0); }
 
 .contactForm {
   position: relative; }
