--- a/docs/SASS/abstracts/_mixins.scss
+++ b/docs/SASS/abstracts/_mixins.scss
@@ -26,7 +26,17 @@
   @if $breakpoint == tab-land {
     @media only screen and (min-width: 75em) { @content };    //1200px
   }
+  @if $breakpoint == weirdIpad {
+    @media only screen and (min-width: 87.5em) { @content };    //1400px
+  }
+  @if $breakpoint == weirdIpad2 {
+    @media only screen and (min-width: 100em) { @content };    //1600px
+  }
   @if $breakpoint == big-desktop {
     @media only screen and (min-width: 112.5em) { @content };    //1800
   }
+  @if $breakpoint == superBig-desktop {
+    @media only screen and (min-width: 137.5em) { @content };    //2200
+  }
+
 }
