--- a/docs/css/style.concat.css
+++ b/docs/css/style.concat.css
@@ -366,12 +366,16 @@ a.intro-Contact-link {
       display: block;
       width: 15rem; }
     .Tabs__option-text {
+      display: none;
       visibility: hidden;
       transition: all .4s;
       opacity: 0;
       color: white;
       font-size: 1.6rem;
       transform: translateY(2rem); }
+      @media only screen and (min-width: 37.5em) {
+        .Tabs__option-text {
+          display: block; } }
     .Tabs__option-input {
       display: none; }
     .Tabs__option-button {
