--- a/docs/SASS/components/_portfolioContainer.scss
+++ b/docs/SASS/components/_portfolioContainer.scss
@@ -140,7 +140,7 @@
     margin: 3rem 0 2rem 0;
     color: $color-white;
     font-size: 80%;
-    padding: 0 1.5rem
+    padding: 0 2rem
 
   }
 
@@ -239,6 +239,7 @@
   &__description {
     color: $color-white;
     font-size: $fontSize-2;
+    padding-bottom: 6rem;
       max-width: 50rem;
 
       @include respond(tab-port) {
@@ -376,7 +377,7 @@
           margin-left: 10rem;
           text-align: start;
         }
-        padding-bottom: 6rem;
+        // padding-bottom: 6rem;
 
       }
     }
