trying animation again

--- a/docs/SASS/components/_portfolioContainer.scss
+++ b/docs/SASS/components/_portfolioContainer.scss
@@ -105,7 +105,8 @@
         cursor: pointer;
         position: relative;
         padding-left: 3.5rem;
-        line-height: 15px;
+        line-height: 18px;
+        height: 10px;
         // @include respond(tab-land) {
         //   line-height: normal;
         // }
